// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle a Dynamic Gallery with mocked gallery nodes 1`] = `
.c5 {
  display: block;
  width: 100%;
  height: auto;
  position: relative;
}

.c6 {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

.c18 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  fill: #000000;
}

.c20 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  fill: #000000;
}

.c23 {
  fill: #000000;
}

.c9 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2000;
  visibility: hidden;
}

.c10 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.8);
  z-index: 0;
}

.c11 {
  display: block;
  padding: 0.5rem;
  background: transparent;
  border: none;
  z-index: 1;
  margin-top: 72px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  position: relative;
  padding: 1rem;
  background: #ffffff;
  border-radius: 1rem;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 128px;
  min-height: 32px;
  width: 100%;
}

.c13 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: width 0.3s ease-in-out,height 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,height 0.3s ease-in-out;
}

.c13 img {
  opacity: 0;
  -webkit-transition: opacity 0.1s ease-out 0.3s;
  transition: opacity 0.1s ease-out 0.3s;
}

.c14 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 0.5rem;
  width: 100%;
  max-width: 1024px;
  padding: 0 1rem;
}

.c15 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 0.5rem;
  border: none;
  background-color: white;
  cursor: pointer;
  z-index: 10;
}

.c15 svg {
  -webkit-transition: fill 0.1s ease-out;
  transition: fill 0.1s ease-out;
}

.c15:focus-visible {
  outline: 2px solid #E52630;
}

.c22 {
  top: 0;
  right: 0;
}

.c16 {
  top: 50%;
  left: 0;
  -webkit-transform: translate(-1rem,-50%);
  -ms-transform: translate(-1rem,-50%);
  transform: translate(-1rem,-50%);
}

.c19 {
  top: 50%;
  right: 0;
  -webkit-transform: translate(1rem,-50%);
  -ms-transform: translate(1rem,-50%);
  transform: translate(1rem,-50%);
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  position: relative;
  background: transparent;
  padding: 0rem 1rem 2rem;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  width: 100%;
  max-width: 1500px;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.1rem;
}

.c8 {
  display: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.9rem;
  padding: 0;
  margin: 0;
  background: none;
  border: none;
  text-align: left;
  cursor: pointer;
  color: inherit;
}

.c3:focus-visible {
  outline: 2px solid black;
  outline-offset: 0.5rem;
  border-radius: 1rem;
}

.c3 div:first-child {
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
}

.c3 > div:first-child:hover {
  box-shadow: 0px 3px 10px 0px rgba(0,0,0,0.4);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  width: 100%;
  min-height: undefinedpx;
  max-height: undefinedpx;
  overflow: hidden;
  border-radius: 1rem;
  background: rgba(0,0,0,0.05);
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
}

.c4 img {
  height: 100%;
  opacity: 0;
  -webkit-transition: opacity 0.1s ease-out 0.3s;
  transition: opacity 0.1s ease-out 0.3s;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0 1rem;
}

.c17 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.c24 {
  bottom: 0;
}

@media (min-width:1024px) {
  .c18 {
    fill: #000000;
  }
}

@media (min-width:1024px) {
  .c20 {
    fill: #000000;
  }
}

@media (min-width:1024px) {
  .c11 {
    margin-top: 84px;
  }
}

@media (hover:hover) {
  .c15:hover svg {
    fill: #E52630;
  }
}

@media (min-width:1024px) {
  .c16 {
    position: fixed;
    -webkit-transform: translate(1rem,-50%);
    -ms-transform: translate(1rem,-50%);
    transform: translate(1rem,-50%);
    top: 50%;
  }
}

@media (min-width:1024px) {
  .c19 {
    position: fixed;
    -webkit-transform: translate(-1rem,-50%);
    -ms-transform: translate(-1rem,-50%);
    transform: translate(-1rem,-50%);
    top: 50%;
  }
}

@media (min-width:740px) {
  .c0 {
    gap: 1rem;
    padding: 0rem 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c1 {
    gap: 2rem;
  }
}

@media (min-width:740px) {
  .c2 {
    gap: 2rem;
  }
}

<div
  className="c0 gallery-container"
>
  <div
    className="c1 gallery-grid"
    onKeyDown={[Function]}
  >
    <div
      className="c2 gallery-column"
    >
      <button
        aria-label=""
        className="c3 gallery-node"
        data-node-index={0}
        onPointerUp={[Function]}
        tabIndex={0}
        title=""
      >
        <div
          className="c4 gallery-node-image"
        >
          <div
            className="c5"
            height="auto"
            width="100%"
          >
            <img
              alt=""
              className="c6 lazyload"
              data-src="image1.jpg"
              height="auto"
              onLoad={[Function]}
              width="100%"
            />
          </div>
        </div>
        <div
          className="c7"
        />
      </button>
    </div>
    <div
      className="c2 gallery-column"
    >
      <button
        aria-label=""
        className="c3 gallery-node"
        data-node-index={1}
        onPointerUp={[Function]}
        tabIndex={0}
        title=""
      >
        <div
          className="c4 gallery-node-image"
        >
          <div
            className="c5"
            height="auto"
            width="100%"
          >
            <img
              alt=""
              className="c6 lazyload"
              data-src="image2.jpg"
              height="auto"
              onLoad={[Function]}
              width="100%"
            />
          </div>
        </div>
        <div
          className="c7"
        />
      </button>
    </div>
    <div
      className="c2 gallery-column"
    >
      <button
        aria-label=""
        className="c3 gallery-node"
        data-node-index={2}
        onPointerUp={[Function]}
        tabIndex={0}
        title=""
      >
        <div
          className="c4 gallery-node-image"
        >
          <div
            className="c5"
            height="auto"
            width="100%"
          >
            <img
              alt=""
              className="c6 lazyload"
              data-src="image3.jpg"
              height="auto"
              onLoad={[Function]}
              width="100%"
            />
          </div>
        </div>
        <div
          className="c7"
        />
      </button>
    </div>
    <div
      className="c8"
    >
      No images to display
    </div>
  </div>
  <div
    className="c9"
  >
    <div
      className="c10"
      onPointerUp={[Function]}
    />
    <dialog
      aria-describedby="lightboxDescription"
      aria-labelledby="lightboxTitle"
      className="c11"
    >
      <div
        className="c12"
      >
        <div
          className="c13 lightbox-image"
        >
          <div
            className="c14"
          >
            <span
              className="css-1xdhyk6"
            >
              <span
                className="css-1fr62ah"
              />
              <span
                className="css-1q1fqtl"
              />
              <span
                className="css-1v7m6ew"
              />
            </span>
          </div>
          <button
            className="c15 c16"
            onClick={[Function]}
            type="button"
          >
            <span
              className="c17"
            >
              Previous
            </span>
            <svg
              className="c18"
              direction="left"
              height={16}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
              />
            </svg>
          </button>
          <button
            className="c15 c19"
            onClick={[Function]}
            type="button"
          >
            <span
              className="c17"
            >
              Next
            </span>
            <svg
              className="c20"
              direction="right"
              height={16}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-atomic="true"
          aria-live="polite"
          className="c21"
          id="lightboxDescription"
        />
        <button
          className="c15 c22 close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            Close
          </span>
          <svg
            className="c23"
            height={16}
            viewBox="0 0 96 96"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="85.48 17.59 78.41 10.52 48 40.93 17.59 10.52 10.52 17.59 40.93 48 10.52 78.41 17.59 85.48 48 55.07 78.41 85.48 85.48 78.41 55.07 48 85.48 17.59"
            />
          </svg>
        </button>
      </div>
    </dialog>
  </div>
  <span
    className="c17 c24 gallery-focus-trap"
    tabIndex={0}
  >
    <span>
      End of gallery
    </span>
  </span>
</div>
`;

exports[`renders an empty Dynamic Gallery with no options set 1`] = `
.c12 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  fill: #000000;
}

.c14 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  fill: #000000;
}

.c17 {
  fill: #000000;
}

.c3 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2000;
  visibility: hidden;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.8);
  z-index: 0;
}

.c5 {
  display: block;
  padding: 0.5rem;
  background: transparent;
  border: none;
  z-index: 1;
  margin-top: 72px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  position: relative;
  padding: 1rem;
  background: #ffffff;
  border-radius: 1rem;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 128px;
  min-height: 32px;
  width: 100%;
}

.c7 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: width 0.3s ease-in-out,height 0.3s ease-in-out;
  transition: width 0.3s ease-in-out,height 0.3s ease-in-out;
}

.c7 img {
  opacity: 0;
  -webkit-transition: opacity 0.1s ease-out 0.3s;
  transition: opacity 0.1s ease-out 0.3s;
}

.c8 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  gap: 0.5rem;
  width: 100%;
  max-width: 1024px;
  padding: 0 1rem;
}

.c9 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 0.5rem;
  border: none;
  background-color: white;
  cursor: pointer;
  z-index: 10;
}

.c9 svg {
  -webkit-transition: fill 0.1s ease-out;
  transition: fill 0.1s ease-out;
}

.c9:focus-visible {
  outline: 2px solid #E52630;
}

.c16 {
  top: 0;
  right: 0;
}

.c10 {
  top: 50%;
  left: 0;
  -webkit-transform: translate(-1rem,-50%);
  -ms-transform: translate(-1rem,-50%);
  transform: translate(-1rem,-50%);
}

.c13 {
  top: 50%;
  right: 0;
  -webkit-transform: translate(1rem,-50%);
  -ms-transform: translate(1rem,-50%);
  transform: translate(1rem,-50%);
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  position: relative;
  background: transparent;
  padding: 0rem 1rem 2rem;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  width: 100%;
  max-width: 1500px;
}

.c2 {
  display: block;
}

.c11 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.c18 {
  bottom: 0;
}

@media (min-width:1024px) {
  .c12 {
    fill: #000000;
  }
}

@media (min-width:1024px) {
  .c14 {
    fill: #000000;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-top: 84px;
  }
}

@media (hover:hover) {
  .c9:hover svg {
    fill: #E52630;
  }
}

@media (min-width:1024px) {
  .c10 {
    position: fixed;
    -webkit-transform: translate(1rem,-50%);
    -ms-transform: translate(1rem,-50%);
    transform: translate(1rem,-50%);
    top: 50%;
  }
}

@media (min-width:1024px) {
  .c13 {
    position: fixed;
    -webkit-transform: translate(-1rem,-50%);
    -ms-transform: translate(-1rem,-50%);
    transform: translate(-1rem,-50%);
    top: 50%;
  }
}

@media (min-width:740px) {
  .c0 {
    gap: 1rem;
    padding: 0rem 2rem 2rem;
  }
}

@media (min-width:740px) {
  .c1 {
    gap: 2rem;
  }
}

<div
  className="c0 gallery-container"
>
  <div
    className="c1 gallery-grid"
    onKeyDown={[Function]}
  >
    <div
      className="c2"
    >
      No images to display
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onPointerUp={[Function]}
    />
    <dialog
      aria-describedby="lightboxDescription"
      aria-labelledby="lightboxTitle"
      className="c5"
    >
      <div
        className="c6"
      >
        <div
          className="c7 lightbox-image"
        >
          <div
            className="c8"
          >
            <span
              className="css-1xdhyk6"
            >
              <span
                className="css-1fr62ah"
              />
              <span
                className="css-1q1fqtl"
              />
              <span
                className="css-1v7m6ew"
              />
            </span>
          </div>
          <button
            className="c9 c10"
            onClick={[Function]}
            type="button"
          >
            <span
              className="c11"
            >
              Previous
            </span>
            <svg
              className="c12"
              direction="left"
              height={16}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
              />
            </svg>
          </button>
          <button
            className="c9 c13"
            onClick={[Function]}
            type="button"
          >
            <span
              className="c11"
            >
              Next
            </span>
            <svg
              className="c14"
              direction="right"
              height={16}
              viewBox="0 0 15 15"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.58496 1.3501C9.1395 0.88346 8.40641 0.883488 7.96094 1.3501C7.52803 1.80361 7.5281 2.53033 7.96094 2.98389L11.1582 6.3335H1.13672C0.48748 6.3335 0 6.87834 0 7.50049C2.15408e-05 8.12262 0.487494 8.66748 1.13672 8.66748H11.1582L7.96094 12.0171C7.52806 12.4706 7.52899 13.1974 7.96191 13.6509C8.18163 13.8804 8.47556 14.0005 8.77344 14.0005C9.07114 14.0004 9.36533 13.8809 9.58496 13.6509L14.6758 8.31689L14.6748 8.31592L14.6875 8.30322L14.6865 8.30225C14.6954 8.29227 14.7044 8.28494 14.71 8.27783C14.7117 8.27557 14.7133 8.27298 14.7148 8.271C14.7485 8.23215 14.7824 8.18937 14.8135 8.14111L14.8154 8.13818C14.8354 8.1067 14.8493 8.07854 14.8564 8.06396L14.8652 8.04639L14.8662 8.04443L14.8672 8.04346C14.8672 8.04346 14.868 8.0407 14.8691 8.03857C14.8709 8.03524 14.8758 8.02683 14.8799 8.01904L14.8802 8.01851C14.8888 8.00212 14.9034 7.97435 14.917 7.93994V7.93799C14.9303 7.90387 14.9391 7.87297 14.9443 7.854C14.9469 7.8447 14.9498 7.83579 14.9512 7.83057C14.9527 7.82466 14.9535 7.82292 14.9541 7.8208C14.9541 7.8208 14.9542 7.81765 14.9551 7.81494L14.958 7.80615L14.9586 7.80434C14.9631 7.78973 14.9718 7.76131 14.9785 7.72705V7.7251C15.0066 7.57717 15.0066 7.42472 14.9785 7.27686V7.2749L14.958 7.1958L14.9551 7.18604L14.9531 7.18018L14.9512 7.17236C14.9497 7.16652 14.9481 7.15689 14.9453 7.14697C14.9398 7.12707 14.9307 7.09666 14.917 7.06201C14.9032 7.027 14.8885 6.99825 14.8799 6.98193C14.8758 6.97415 14.8709 6.96574 14.8691 6.9624L14.8564 6.93701C14.849 6.92189 14.8351 6.89384 14.8154 6.86279L14.8145 6.86084L14.7529 6.77393C14.7316 6.74671 14.7094 6.72141 14.6875 6.69775C14.6837 6.69353 14.6802 6.68867 14.6758 6.68408L9.58496 1.3501Z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-atomic="true"
          aria-live="polite"
          className="c15"
          id="lightboxDescription"
        />
        <button
          className="c9 c16 close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c11"
          >
            Close
          </span>
          <svg
            className="c17"
            height={16}
            viewBox="0 0 96 96"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="85.48 17.59 78.41 10.52 48 40.93 17.59 10.52 10.52 17.59 40.93 48 10.52 78.41 17.59 85.48 48 55.07 78.41 85.48 85.48 78.41 55.07 48 85.48 17.59"
            />
          </svg>
        </button>
      </div>
    </dialog>
  </div>
  <span
    className="c11 c18 gallery-focus-trap"
    tabIndex={0}
  >
    <span>
      End of gallery
    </span>
  </span>
</div>
`;
